--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-tsparticles": "^1.37.4"
+    "react-tsparticles": "^1.37.4",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
